ボタン配置

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -6,3 +6,13 @@
 button {
   margin-left: 5px;
 }
+
+.task {
+  margin-bottom:  10px;
+}
+
+.un-check {
+  background: #CCFF99;
+  border: 2px solid #4CAF50;
+  border-radius: 4px;
+}
