クリックで色を切り替えられるように

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -30,6 +30,9 @@
         border-bottom: none;
         float: right;
       }
+      .selected {
+        background-color: #66CCFF;
+      }
     }
   }
 }
